# ard_tile

./: .gitignore  CMakeLists.txt  INSTALL  InstallExecutable.cmake  Makefile  README.md  make.config
ARD_clip/: AK_tileFootprints.py  ARD_Clip.conf  ARD_Clip.py  ARD_Clip.yaml  ARD_Clip_L457.py  ARD_Clip_L8.py  ARD_HelperFunctions.py  ARD_metadata.py  ARD_regionLU.py  ARD_scenesForTilePathLU.py  ARD_tilesForSceneLU.py  CMakeLists.txt  CU_tileFootprints.py  Dockerfile  HI_tileFootprints.py  Makefile  cli.py  config.py  db.py  external.py  geofuncs.py  landsat.py  util.py
ARD_determine_segments_framework/: ARD_determine_segments.conf  CMakeLists.txt  Dockerfile  Makefile  cli.py  config.py  db.py  determine_segments.py  determine_segments_no_mesos.py  determine_segments_no_mesos_after.py  framework.py  util.py
controller/: ARD_determine_segments.conf  CMakeLists.txt  Dockerfile  Makefile  ard_tile.json  ardtile.py  build_controller.sh  requirements.txt
db_tables/: ARD_COMPLETED_TILES_table.sql  ARD_L2_ALBERS_INVENTORY_V.sql  ARD_PROCESSED_SCENES_table.sql  ARD_UNPROCESSED_SCENES_V.sql  SCENE_COORDINATE_MASTER_V.sql
documentation/: ARDTILEControllerHelp.docx
metadata_schema/: CMakeLists.txt  Makefile  ard_metadata_v1_0.xsd  ard_metadata_v1_1.xsd
tools/: .gitignore  README  ard_tile_stats.py  ard_tiles.tex  variables.tex
